# aiojobs

./: .coveragerc  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml
CHANGES/: 137.bugfix  137.removal  152.feature  19.feature  21.bugfix  275.feature  277.feature  279.removal  280.feature  29.bugfix  290.bugfix  312.bugfix  48.feature  525.feature.rst  525.removal.rst  526.feature.rst  537.doc.rst  538.misc.rst  606.bugfix  72.bugfix  97.bugfix  README.md  README.rst
aiojobs/: __init__.py  _job.py  _scheduler.py  aiohttp.py  sanic.py
docs/: Makefile  api.rst  conf.py  index.rst  intro.rst  make.bat  quickstart.rst
requirements/: ci.txt  deploy.txt  dev.txt  doc.txt
tests/: conftest.py  test_aiohttp.py  test_job.py  test_sanic.py  test_scheduler.py
