[build-system]
requires = ["setuptools >= 83.0.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.towncrier]
package = "aiojobs"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/aio-libs/aiojobs/issues/{issue}>`_"
