[metadata]
name = aiojobs
version = attr: aiojobs.__version__
url = https://github.com/aio-libs/aiojobs
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/aiojobs/actions?query=workflow%%3ACI
  Coverage: codecov = https://codecov.io/github/aio-libs/aiojobs
  Docs: Changelog = https://docs.aiojobs.org/en/stable/changes.html
  Docs: RTD = https://docs.aiojobs.org
  GitHub: issues = https://github.com/aio-libs/aiojobs/issues
  GitHub: repo = https://github.com/aio-libs/aiojobs
description = Job scheduler for managing background tasks (asyncio)
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = aiohttp team <team@aiohttp.org>
maintainer_email = team@aiohttp.org
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

  Topic :: Software Development

[options]
python_requires = >=3.8
packages = aiojobs
include_package_data = True

install_requires =
  async-timeout >= 4.0.0 ; python_version < "3.11"

[options.extras_require]
aiohttp =
  aiohttp >= 3.9.0b1

[flake8]
ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
max-line-length = 88
